--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -11,18 +11,18 @@
   <app-nav-bar-accueil></app-nav-bar-accueil>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container" id="accueil">
+    <!-- <div>
+      <img
+        src="./assets/img/accueil/module1_accueil.png"
+        alt="Partie 1 de la page d'accueil"
+        width="100%"
+        height="auto"
+        title="module 1 de la page d'accueil"
+      />
+    </div> -->
     <!-- Jumbotron Header -->
-    <div class="jumbotron my-4" id="jb-accueil">
-      <div>
-        <img
-          src="./assets/img/accueil/module1_accueil.png"
-          alt="Partie 1 de la page d'accueil"
-          width="100%"
-          height="auto"
-          title="module 1 de la page d'accueil"
-        />
-      </div>
+    <div class="jumbotron my-4">
       <h1 class="display-3">{{ "accueil_h1" | translate }}</h1>
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam,
