--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -1,3 +1,3 @@
-#jb-accueil {
-  background-image: url("/src/assets/img/accueil/module1_accueil.png");
+#accueil {
+  background-image: url("../../assets/img/accueil/module1_accueil.png");
 }
