--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -12,7 +12,7 @@
 
   <!-- Page Content -->
   <div class="container" id="accueil">
-    <!-- <div>
+    <div>
       <img
         src="./assets/img/accueil/module1_accueil.png"
         alt="Partie 1 de la page d'accueil"
@@ -20,10 +20,12 @@
         height="auto"
         title="module 1 de la page d'accueil"
       />
-    </div> -->
+    </div>
     <!-- Jumbotron Header -->
     <div class="jumbotron my-4">
-      <h1 class="display-3">{{ "accueil_h1" | translate }}</h1>
+      <h1 class="display-3">{{ "accueil_h1" }}</h1>
+      <h2 class="display-3">{{ "accueil_h2" }}</h2>
+      <h2 class="display-3">{{ "accueil2_h2" }}</h2>
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam,
         eligendi, in quo sunt possimus non incidunt odit vero aliquid similique
