creat component lendMEBref et Connecti implemente

--- a/src/app/visitor-contact/visitor-contact.component.html
+++ b/src/app/visitor-contact/visitor-contact.component.html
@@ -10,38 +10,38 @@
 
     <!-- Navigation -->
     <app-nav-bar-accueil></app-nav-bar-accueil>
-  
+
     <!-- Page Content -->
-    <div class="container"> 
-     
-  
+    <div class="container">
+
+
       <!-- Page Features -->
       <div class="row text-center">
 
-        <div class="container-fluid">       
+        <div class="container-fluid">
 
 
             <div class="row">
-  
+
                 <div class="col-lg-3 col-md-6 mb-4">
 
                     <img src="assets/img/icowl-cog.png" style="width:60%" />
 
-                    <p>Pour comprendre comment Ulule fonctionne, vous pouvez lire notre <a href="https://support.ulule.com/hc/fr-fr">aide en ligne</a></p>
+                    <p>Pour comprendre comment LendMe fonctionne, vous pouvez lire notre <a href="https://support.LendMe.com/hc/fr-fr">aide en ligne</a></p>
                  </div>
-                 
+
                  <div class="col-lg-3 col-md-6 mb-4">
 
                     <img src="assets/img/icowl-grouch.jpg" style="width:70%"/>
 
-                    <p>Si vous rencontrez un problème ou si vous souhaitez poser une question aux ululeurs, n'hésitez pas à consulter ou à utiliser <a href="https://community.ulule.com">le forum</a></p>
+                    <p>Si vous rencontrez un problème ou si vous souhaitez poser une question aux LendMeurs, n'hésitez pas à consulter ou à utiliser <a href="https://community.LendMe.com">le forum</a></p>
                  </div>
 
                  <div class="col-lg-3 col-md-6 mb-4">
 
                     <img src="assets/img/partenariat.jpg"  style="width:70%"/>
 
-                    <p>Vous souhaitez en savoir plus sur nos partenariats BtoB ?<br><a href="https://brands.ulule.com/contact/">Visitez notre site Ulule For Brands</a></p>
+                    <p>Vous souhaitez en savoir plus sur nos partenariats BtoB ?<br><a href="https://brands.LendMe.com/contact/">Visitez notre site LendMe For Brands</a></p>
                  </div>
 
                  <div class="col-lg-3 col-md-6 mb-4">
@@ -50,25 +50,25 @@
 
                     <p>Pas de réponses à vos questions ? Merci d'utiliser le <a routerLink="/form-contact" routerLinkActive="active">formulaire de contact</a>, nous vous répondrons dans les meilleurs délais.</p>
                  </div>
-  
-  
+
+
             </div>
-  
+
           </div>
-  
-         
-       
-  
+
+
+
+
       </div>
       <!-- /.row -->
-  
+
     </div>
     <!-- /.container -->
-  
-    <!-- Footer -->
-    <app-footer-accueil></app-footer-accueil> 
 
-  
+    <!-- Footer -->
+    <app-footer-accueil></app-footer-accueil>
+
+
   </body>
 
 
