--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -17,8 +17,8 @@
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
         <h1 class="display-3">{{'accueil_h1' | translate}}</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-        <a href="#" class="btn btn-primary btn-lg" [routerLink]="['/connection']" routerLinkActive="active">Je m'inscris</a>
+        <p class="lead">Donner du sens à votre épargne. Aider quelqu'un a réaliser son rêve.</p>
+        <a href="#" class="btn btn-primary btn-lg" [routerLink]="['/Identification']" routerLinkActive="active">Je m'inscris</a>
 
       </header>
 
