--- a/src/app/connection/connection.component.html
+++ b/src/app/connection/connection.component.html
@@ -1,7 +1,6 @@
+<ngx-ui-loader></ngx-ui-loader>
 <div class="container login-container">
   <div class="row">
-
-
     <div class="col-md-6 login-form-1">
       <h3>Connection</h3>
 
