--- a/src/app/identification/identification.component.html
+++ b/src/app/identification/identification.component.html
@@ -1,13 +1,7 @@
 <ngx-ui-loader></ngx-ui-loader>
 <app-nav-bar-accueil></app-nav-bar-accueil>
 
-                <div class="col-md-6 login-form-2">
-
-                    <div class="login-logo">
-
-                        <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-
-                    </div>
+                <div class="umbotron my-4">
 
                     <h3>Inscription</h3>
 
