--- a/src/app/templates/accueil/nav-bar/nav-bar.component.html
+++ b/src/app/templates/accueil/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
 
         <!-- Rubrique : Login -->
         <li class="nav-item">
-          <a class="nav-link" routerLink="/Identification" routerLinkActive="active">Connexion</a>
+          <a class="nav-link" routerLink="/connection" routerLinkActive="active">Connexion</a>
         </li>
 
         <!-- Rubrique : FAQ pour répondre aux interrogations des utilisateurs -->
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">FAQ</a>
+          <a class="nav-link" routerLink="/faq" routerLinkActive="active">FAQ</a>
         </li>
 
         <!-- Barre de RECHERCHE pour recherche par catégorie de projets -->
