--- a/src/app/my-project-show-company-owner/my-project-show-company-owner.component.html
+++ b/src/app/my-project-show-company-owner/my-project-show-company-owner.component.html
@@ -141,7 +141,7 @@
 
                           <div class="card-body">
 
-                            <h3>proté de projet : {{ObjetProjectTemplate.project._porte_project.nom}}</h3>
+                            <h3>Porteur du projet : {{ObjetProjectTemplate.project._porte_project.nom}}</h3>
                           </div>
 
                         </div>
@@ -487,7 +487,7 @@
                         <td>{{ObjectFondInvestor._investisseurProject.date_created}}</td>
 
                         <td scope="row">
-                          
+
                           <img  [src]="ObjectFondInvestor._investisseurProject._userProjectInvest.photoUser" class="mr-2"   style="width: 20px"  alt=""></td>
 
                         <td>
