--- a/src/app/identification/identification.component.html
+++ b/src/app/identification/identification.component.html
@@ -1,7 +1,9 @@
 <ngx-ui-loader></ngx-ui-loader>
+
 <app-nav-bar-accueil></app-nav-bar-accueil>
 
-                <div class="umbotron my-4">
+
+                <div class="jumbotron my-4">
 
                     <h3>Inscription</h3>
 
@@ -15,13 +17,13 @@
 
                     <div class="form-group">
 
-                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.nom" name = "nomInscription" placeholder="votre nom *" required value="" />
+                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.nom" name = "nomInscription" placeholder="Votre nom *" required value="" />
 
                     </div>
 
                     <div class="form-group">
 
-                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.prenom" name = "prenomInscription" placeholder="votre prenom *" required value="" />
+                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.prenom" name = "prenomInscription" placeholder="Votre prenom *" required value="" />
 
                     </div>
 
@@ -31,7 +33,7 @@
 
                           <select class="form-control"  [(ngModel)] = "ObjetInscription.sex" name="sexInscription" required value="">
 
-                                  <option  value="">Selectionner votre sex</option>
+                                  <option  value="">Selectionner votre sexe</option>
 
                                   <option  value="H" >Homme</option>
 
@@ -44,19 +46,19 @@
                       </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.pseudo_name" name = "pseudo_nameInscription" placeholder="votre pseudo-name *" required value="" />
+                        <input type="text" class="form-control" [(ngModel)] = "ObjetInscription.pseudo_name" name = "pseudo_nameInscription" placeholder="Votre pseudo *" required value="" />
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" [(ngModel)] = "ObjetInscription.login" name = "emailInscription" placeholder="Your Email *" required value="" />
+                        <input type="email" class="form-control" [(ngModel)] = "ObjetInscription.login" name = "emailInscription" placeholder="Email *" required value="" />
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" [(ngModel)] = "ObjetInscription.password" name = "passwordInscription" placeholder="Your Password *" required value="" />
+                        <input type="password" class="form-control" [(ngModel)] = "ObjetInscription.password" name = "passwordInscription" placeholder="Mot de passe *" required value="" />
                     </div>
 
                     <div class="form-group">
 
-                      <dp-date-picker  placeholder ="date de naissance"    (onChange)="addEventDateNaissance($event)"  required="true"  [config]="datePickerConfig"></dp-date-picker>
+                      <dp-date-picker  placeholder ="Date de naissance"    (onChange)="addEventDateNaissance($event)"  required="true"  [config]="datePickerConfig"></dp-date-picker>
 
 
                     </div>
