--- a/src/app/connection/connection.component.html
+++ b/src/app/connection/connection.component.html
@@ -1,7 +1,10 @@
 <ngx-ui-loader></ngx-ui-loader>
+
+<app-nav-bar-accueil></app-nav-bar-accueil>
+
 <div class="container login-container">
   <div class="row">
-    <div class="col-md-6 login-form-1">
+    <div class="jumbotron my-4">
       <h3>Connexion</h3>
 
       <div class="alert alert-danger" *ngIf="isErreurLogin">
@@ -14,40 +17,19 @@
         (ngSubmit)="onFormSubmitLogin()"
       >
         <div class="form-group">
-          <input
-            type="text"
-            class="form-control"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
-            placeholder="Your Email *"
-            [(ngModel)]="ObjetLogin.emailLogin"
-            name="emailLogin"
-            required
-            value=""
-          />
+          <input type="email" class="form-control"
+            placeholder="Email *" [(ngModel)]="ObjetLogin.emailLogin" name="emailLogin" required value="" />
         </div>
         <div class="form-group">
-          <input
-            type="password"
-            class="form-control"
-            placeholder="Your Password *"
-            [(ngModel)]="ObjetLogin.passwordLogin"
-            name="passwordLogin"
-            required
-            value=""
-          />
+          <input type="password" class="form-control" placeholder="Mot de passe *"
+            [(ngModel)]="ObjetLogin.passwordLogin" name="passwordLogin" required value="" />
         </div>
 
         <div class="form-group">
-          <button
-            type="submit"
-            class="btn btn-primary"
-            [disabled]="!loginForm.form.valid"
-          >
-            Login
-          </button>
+          <button type="submit" class="btn btn-primary" [disabled]="!loginForm.form.valid">Connexion</button>
         </div>
         <div class="form-group">
-          <a href="#" class="btnForgetPwd">Forget Password?</a>
+          <a href="#" class="btnForgetPwd">Mot de passe oublié?</a>
         </div>
       </form>
     </div>
