--- a/src/app/templates/accueil/nav-bar/nav-bar.component.html
+++ b/src/app/templates/accueil/nav-bar/nav-bar.component.html
@@ -12,16 +12,11 @@
       <ul class="navbar-nav ml-auto">
 
         <!-- Rubrique page d'accueil : HOME -->
-        <li class="nav-item active">
-          <a class="nav-link" href="#">
-            <i class="fa fa-home" aria-hidden="true"></i> <!-- Home -->
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
+
 
         <!-- Rubrique : A propos -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Lend Me en Bref</a>
+          <a class="nav-link" routerLink="/lmbref" routerLinkActive="active">Lend Me en Bref</a>
         </li>
 
         <!-- Rubrique : Login -->
@@ -32,7 +27,7 @@
         <!-- Rubrique : FAQ pour répondre aux interrogations des utilisateurs -->
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/page-contact" routerLinkActive="active"> Nous contacter</a>
+          <a class="nav-link" routerLink="/form-contact" routerLinkActive="active"> Nous contacter</a>
         </li>
 
         <li class="nav-item">
