Mise a jour Page connecte

--- a/src/app/templates/user/side-bar-left-templates/side-bar-left-templates.component.html
+++ b/src/app/templates/user/side-bar-left-templates/side-bar-left-templates.component.html
@@ -15,8 +15,8 @@
       aria-expanded="true"
       aria-controls="collapseTwo"
     >
-      <i class="fas fa-fw fa-cog"></i>
-      <span>LES PROJETS</span>
+      <i class="fas fa-fw fa-globe-africa"></i>
+      <span>Les Projets</span>
     </a>
     <div
       id="collapseTwo"
@@ -28,25 +28,23 @@
         <a
           class="collapse-item"
           href="#"
+          routerLink="/user-all-projetcs"
+          routerLinkActive="active"
+          >Tous les projets</a
+        >
+        <a
+          class="collapse-item"
+          href="#"
           routerLink="/user-my-projetcs"
           routerLinkActive="active"
           >Mes projets</a
         >
-
         <a
           class="collapse-item"
           href="#"
           routerLink="/user-my-contrib-projetcs"
           routerLinkActive="active"
-          >Mes contributions-projects</a
-        >
-
-        <a
-          class="collapse-item"
-          href="#"
-          routerLink="/user-all-projetcs"
-          routerLinkActive="active"
-          >Les projets</a
+          >Les projets que je finance</a
         >
       </div>
     </div>
@@ -62,7 +60,7 @@
       aria-expanded="true"
       aria-controls="collapseUtilities"
     >
-      <i class="fas fa-fw fa-wrench"></i>
+      <i class="fas fa-fw fa-bookmark"></i>
       <span>Favoris</span>
     </a>
     <div
@@ -77,7 +75,7 @@
           class="collapse-item"
           routerLink="/user-favoris-projetcs"
           routerLinkActive="active"
-          >Mes favoris projets</a
+          >Mes Projets favoris</a
         >
       </div>
     </div>
