--- a/src/app/my-favoris-projects-company-owner/my-favoris-projects-company-owner.component.html
+++ b/src/app/my-favoris-projects-company-owner/my-favoris-projects-company-owner.component.html
@@ -1,172 +1,227 @@
 <ngx-ui-loader></ngx-ui-loader>
 
-
 <body id="page-top">
+  <!-- Page Wrapper -->
+  <div id="wrapper">
+    <!-- Sidebar -->
+    <app-side-bar-left-user-templates
+      *ngIf="infosUser.typeCompte == 'user'"
+    ></app-side-bar-left-user-templates>
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
-  
-      <!-- Sidebar -->
-      <app-side-bar-left-user-templates *ngIf="infosUser.typeCompte == 'user'"></app-side-bar-left-user-templates>
+    <app-side-bar-left-admin-templates
+      *ngIf="infosUser.typeCompte == 'admin'"
+    ></app-side-bar-left-admin-templates>
 
-      <app-side-bar-left-admin-templates *ngIf="infosUser.typeCompte == 'admin'"></app-side-bar-left-admin-templates>
-     
-      <!-- End of Sidebar -->
-  
-      <!-- Content Wrapper -->
-      <div id="content-wrapper" class="d-flex flex-column">
-  
-        <!-- Main Content -->
-        <div id="content">
-  
-          <!-- Topbar  start Nav -->
+    <!-- End of Sidebar -->
 
-          <app-nav-admin-templates *ngIf="infosUser.typeCompte == 'admin'"></app-nav-admin-templates>
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+      <!-- Main Content -->
+      <div id="content">
+        <!-- Topbar  start Nav -->
 
-          <app-nav-user-templates *ngIf="infosUser.typeCompte == 'user'"></app-nav-user-templates>        
+        <app-nav-admin-templates
+          *ngIf="infosUser.typeCompte == 'admin'"
+        ></app-nav-admin-templates>
 
-          
-         
-          <!-- End of Topbar end Nav -->
-  
-          <!-- Begin Page Content -->
-          <div class="container-fluid">
-  
-            <!-- Page Heading -->
-            <div class="d-sm-flex align-items-center justify-content-between mb-4">
-              <h1 class="h3 mb-0 text-gray-800">LES PROJETS</h1>
-              <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" routerLink="/user-projetcs-add"   routerLinkActive="active"><i class="fas fa-download fa-sm text-white-50"></i> Lancer un projet</a>
-            </div>
+        <app-nav-user-templates
+          *ngIf="infosUser.typeCompte == 'user'"
+        ></app-nav-user-templates>
 
-            <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="listProjects.length==0" >
-              <strong>Aucun favoris de projet!</strong> n'est disponible.
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-  
-          
-            <div class="row">                      
-  
-              <!-- Content Column -->
-              <div class="col-lg-12 mb-12">
+        <!-- End of Topbar end Nav -->
 
-                <div class="row text-center">
-  
-                  <div class="col-lg-4 col-md-6 mb-4"  *ngFor="let Favorisproject of listProjects; let i = index ">
-                    <div class="card h-100"   >
-                      <img class="card-img-top" [src]="Favorisproject. _project.afficheProject" alt="" style="width :300px;height:200px;margin-left:20%;" [routerLink]="['/user-projetcs-show' , Favorisproject._project.token ]">
-                      <div class="card-body">
-                        <h4 class="card-title">{{Favorisproject. _project.nom}}</h4>                     
-                        <h5 class="card-title">{{Favorisproject._project._statut_project.nom}}</h5>
-                       <h5 class="card-title"  *ngIf="Favorisproject._project._statut_project.nom === 'Validé'">{{listtemplateProjects[i].nbrJours}}</h5>
-                      <h5 class="card-title">{{listtemplateProjects[i].dateLimiteCollecteFormate}}</h5>
-                        <h5 class="card-title">{{Favorisproject._project.categoryProject.nom}}</h5>
-                        <table  style="margin-left: 25%;">
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+          <!-- Page Heading -->
+          <div
+            class="d-sm-flex align-items-center justify-content-between mb-4"
+          >
+            <h1 class="h3 mb-0 text-gray-800">MES PROJETS</h1>
+            <a
+              href="#"
+              class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
+              routerLink="/user-projetcs-add"
+              routerLinkActive="active"
+              ><i class="fas fa-plus-circle fa-sm text-white-50"></i> Lancer un
+              projet</a
+            >
+          </div>
 
-                          <tr>
+          <div
+            class="alert alert-warning alert-dismissible fade show"
+            role="alert"
+            *ngIf="listProjects.length == 0"
+          >
+            <strong>Aucun favoris de projet!</strong> n'est disponible.
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
-                            <td width="10%">                                
+          <div class="row">
+            <!-- Content Column -->
+            <div class="col-lg-12 mb-12">
+              <div class="row text-center">
+                <div
+                  class="col-lg-4 col-md-6 mb-4"
+                  *ngFor="let Favorisproject of listProjects; let i = index"
+                >
+                  <div class="card h-100">
+                    <img
+                      class="card-img-top"
+                      [src]="Favorisproject._project.afficheProject"
+                      alt=""
+                      style="width: 300px; height: 200px; margin-left: 20%"
+                      [routerLink]="[
+                        '/user-projetcs-show',
+                        Favorisproject._project.token
+                      ]"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        {{ Favorisproject._project.nom }}
+                      </h4>
+                      <h5 class="card-title">
+                        {{ Favorisproject._project._statut_project.nom }}
+                      </h5>
+                      <h5
+                        class="card-title"
+                        *ngIf="
+                          Favorisproject._project._statut_project.nom ===
+                          'Validé'
+                        "
+                      >
+                        {{ listtemplateProjects[i].nbrJours }}
+                      </h5>
+                      <h5 class="card-title">
+                        {{ listtemplateProjects[i].dateLimiteCollecteFormate }}
+                      </h5>
+                      <h5 class="card-title">
+                        {{ Favorisproject._project.categoryProject.nom }}
+                      </h5>
+                      <table style="margin-left: 25%">
+                        <tr>
+                          <td width="10%">
+                            <img
+                              class="card-img-top"
+                              src="./assets/img/heart-icon.png"
+                              alt=""
+                              style="width: 35px; height: 35px"
+                            />
 
-                              <img class="card-img-top" src="./assets/img/heart-icon.png"  alt="" style="width :35px;height:35px;" >
+                            <span>{{
+                              Favorisproject._project.total_hearts
+                            }}</span>
+                          </td>
 
-                              <span>{{Favorisproject._project.total_hearts}}</span>
+                          <td width="30%" style="text-align: center">
+                            <img
+                              class="card-img-top"
+                              src="./assets/img/like_ico.png"
+                              alt=""
+                              style="width: 35px; height: 35px"
+                            />
 
-                            </td>
+                            <span>{{
+                              Favorisproject._project.total_like
+                            }}</span>
+                          </td>
 
-                            <td width="30%"  style="text-align: center;">                                
+                          <td width="20%">
+                            <img
+                              class="card-img-top"
+                              src="./assets/img/dislike_ico.png"
+                              alt=""
+                              style="width: 35px; height: 35px"
+                            />
 
-                              <img class="card-img-top" src="./assets/img/like_ico.png"  alt="" style="width :35px;height:35px;" >
+                            <span>{{
+                              Favorisproject._project.total_dislike
+                            }}</span>
+                          </td>
 
-                              <span>{{Favorisproject._project.total_like}}</span>
-                              
-                            </td>
+                          <td width="20%">
+                            <img
+                              class="card-img-top"
+                              src="./assets/img/eye_ico.png"
+                              alt=""
+                              style="width: 38px; height: 35px"
+                            />
 
-                            <td width="20%">                                     
+                            <span>{{
+                              Favorisproject._project.total_vues
+                            }}</span>
+                          </td>
 
-                              <img class="card-img-top" src="./assets/img/dislike_ico.png"  alt="" style="width :35px;height:35px;" >
+                          <td width="20%">
+                            <img
+                              class="card-img-top"
+                              src="./assets/img/picto-dons-300x300.png"
+                              alt=""
+                              style="width: 38px; height: 35px"
+                            />
 
-                              <span>{{Favorisproject._project.total_dislike}}</span>
-                              
-                            </td>
-
-                            <td width="20%">                                     
-
-                              <img class="card-img-top" src="./assets/img/eye_ico.png"  alt="" style="width :38px;height:35px;" >
-
-                              <span>{{Favorisproject._project.total_vues}}</span>
-                              
-                            </td>
-
-                            <td width="20%">                                     
-
-                              <img class="card-img-top" src="./assets/img/picto-dons-300x300.png"  alt="" style="width :38px;height:35px;" >
-
-                              <span>{{Favorisproject._project.total_fonds}} &euro;</span>
-                              
-                            </td>
-
-                          </tr>
-                        </table>
-
-                      </div>
-                      <div class="card-footer">                     
-
-                        <button type="button" class="btn btn-danger" style="margin-right: 1%;"   (click)="removeProjectByMyFavoris(i, Favorisproject)">Supprimer de mes favoris</button>
-
-                        <a  class="btn btn-primary" [routerLink]="['/user-projetcs-show' , Favorisproject._project.token ]"  >Consulter</a>                                    
-                        
-                      </div>
-
+                            <span
+                              >{{
+                                Favorisproject._project.total_fonds
+                              }}
+                              &euro;</span
+                            >
+                          </td>
+                        </tr>
+                      </table>
                     </div>
+                    <div class="card-footer">
+                      <button
+                        type="button"
+                        class="btn btn-danger"
+                        style="margin-right: 1%"
+                        (click)="removeProjectByMyFavoris(i, Favorisproject)"
+                      >
+                        Supprimer de mes favoris
+                      </button>
 
-                  </div>              
-                  
-            
+                      <a
+                        class="btn btn-primary"
+                        [routerLink]="[
+                          '/user-projetcs-show',
+                          Favorisproject._project.token
+                        ]"
+                        >Consulter</a
+                      >
+                    </div>
+                  </div>
                 </div>
-
-       
               </div>
-            
-             
+            </div>
           </div>
-  
-          </div>
-          <!-- /.container-fluid -->
-
-         
-  
         </div>
-        <!-- End of Main Content -->
-  
-        <!-- Footer -->
-        <app-footer-admin-templates *ngIf="infosUser.typeCompte == 'admin'"></app-footer-admin-templates>
-
-        <app-footer-user-templates *ngIf="infosUser.typeCompte == 'user'"></app-footer-user-templates>
-               
-        <!-- End of Footer -->
-  
+        <!-- /.container-fluid -->
       </div>
-      <!-- End of Content Wrapper -->
-  
+      <!-- End of Main Content -->
+
+      <!-- Footer -->
+      <app-footer-admin-templates
+        *ngIf="infosUser.typeCompte == 'admin'"
+      ></app-footer-admin-templates>
+
+      <app-footer-user-templates
+        *ngIf="infosUser.typeCompte == 'user'"
+      ></app-footer-user-templates>
+
+      <!-- End of Footer -->
     </div>
-    <!-- End of Page Wrapper -->
-  
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-    </a>
-  
-   
-  
-  
-  
-  </body>
-  
-  
-  
-  
+    <!-- End of Content Wrapper -->
+  </div>
+  <!-- End of Page Wrapper -->
 
-
-
-
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+</body>
