--- a/src/app/templates/administrator/side-bar-left-templates/side-bar-left-templates.component.html
+++ b/src/app/templates/administrator/side-bar-left-templates/side-bar-left-templates.component.html
@@ -1,69 +1,109 @@
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-  
-    <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-      <div class="sidebar-brand-icon rotate-n-15">
-        <i class="fas fa-laugh-wink"></i>
-      </div>
-      <div class="sidebar-brand-text mx-3">Espace Admin</div>
-    </a>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider my-0">
-
-    <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-      <a class="nav-link" href="index.html">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Dashboard</span></a>
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading">
-      Interface
+<ul
+  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+  id="accordionSidebar"
+>
+  <!-- Sidebar - Brand -->
+  <a
+    class="sidebar-brand d-flex align-items-center justify-content-center"
+    href="index.html"
+  >
+    <div class="sidebar-brand-icon rotate-n-15">
+      <i class="fas fa-laugh-wink"></i>
     </div>
+    <div class="sidebar-brand-text mx-3">Espace Admin</div>
+  </a>
 
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-        <i class="fas fa-fw fa-cog"></i>
-        <span>LES PROJETS</span>
-      </a>
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-         <!-- <h6 class="collapse-header">Custom Components:</h6>-->
-          <a class="collapse-item" href="#" routerLink="/admin-projetcs"   routerLinkActive="active">Les projets</a>
-         <!-- <a class="collapse-item" href="cards.html">Cards</a>-->
-        </div>
+  <!-- Divider -->
+  <hr class="sidebar-divider my-0" />
+
+  <!-- Nav Item - Dashboard -->
+  <li class="nav-item active">
+    <a class="nav-link" href="index.html">
+      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <span>Dashboard</span></a
+    >
+  </li>
+
+  <!-- Divider -->
+  <hr class="sidebar-divider" />
+
+  <!-- Heading -->
+  <div class="sidebar-heading">Interface</div>
+
+  <!-- Nav Item - Pages Collapse Menu -->
+  <li class="nav-item">
+    <a
+      class="nav-link collapsed"
+      href="#"
+      data-toggle="collapse"
+      data-target="#collapseTwo"
+      aria-expanded="true"
+      aria-controls="collapseTwo"
+    >
+      <i class="fas fa-fw fa-globe-africa"></i>
+      <span>Mes Projets</span>
+    </a>
+    <div
+      id="collapseTwo"
+      class="collapse"
+      aria-labelledby="headingTwo"
+      data-parent="#accordionSidebar"
+    >
+      <div class="bg-white py-2 collapse-inner rounded">
+        <!-- <h6 class="collapse-header">Custom Components:</h6>-->
+        <a
+          class="collapse-item"
+          href="#"
+          routerLink="/admin-projetcs"
+          routerLinkActive="active"
+          >Les projets</a
+        >
+        <!-- <a class="collapse-item" href="cards.html">Cards</a>-->
       </div>
-    </li>
+    </div>
+  </li>
 
-    <!-- Nav Item - Utilities Collapse Menu -->
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-        <i class="fas fa-fw fa-wrench"></i>
-        <span>UTLISATEURS</span>
-      </a>
-      <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-          <!--<h6 class="collapse-header">Custom Utilities:</h6>-->
-          <a class="collapse-item" href="#" routerLink="/admin-users"   routerLinkActive="active">Les utilisateurs</a>
-        </div>
+  <!-- Nav Item - Utilities Collapse Menu -->
+  <li class="nav-item">
+    <a
+      class="nav-link collapsed"
+      href="#"
+      data-toggle="collapse"
+      data-target="#collapseUtilities"
+      aria-expanded="true"
+      aria-controls="collapseUtilities"
+    >
+      <i class="fas fa-fw fa-bookmark"></i>
+      <span>UTLISATEURS</span>
+    </a>
+    <div
+      id="collapseUtilities"
+      class="collapse"
+      aria-labelledby="headingUtilities"
+      data-parent="#accordionSidebar"
+    >
+      <div class="bg-white py-2 collapse-inner rounded">
+        <!--<h6 class="collapse-header">Custom Utilities:</h6>-->
+        <a
+          class="collapse-item"
+          href="#"
+          routerLink="/admin-users"
+          routerLinkActive="active"
+          >Les utilisateurs</a
+        >
       </div>
-    </li>
+    </div>
+  </li>
 
-    <!-- Divider -->
+  <!-- Divider -->
   <!--  <hr class="sidebar-divider">-->
 
-    <!-- Heading -->
-   <!-- <div class="sidebar-heading">
+  <!-- Heading -->
+  <!-- <div class="sidebar-heading">
       Addons
     </div>-->
 
-    <!-- Nav Item - Pages Collapse Menu -->
+  <!-- Nav Item - Pages Collapse Menu -->
   <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
         <i class="fas fa-fw fa-folder"></i>
@@ -81,28 +121,27 @@
           <a class="collapse-item" href="blank.html">Blank Page</a>
         </div>
       </div>
-    </li>--> 
+    </li>-->
 
-    <!-- Nav Item - Charts -->
- <!--   <li class="nav-item">
+  <!-- Nav Item - Charts -->
+  <!--   <li class="nav-item">
       <a class="nav-link" href="charts.html">
         <i class="fas fa-fw fa-chart-area"></i>
         <span>Charts</span></a>
     </li>-->
 
-    <!-- Nav Item - Tables -->
+  <!-- Nav Item - Tables -->
   <!--  <li class="nav-item">
       <a class="nav-link" href="tables.html">
         <i class="fas fa-fw fa-table"></i>
         <span>Tables</span></a>
     </li>-->
 
-    <!-- Divider -->
- <!--   <hr class="sidebar-divider d-none d-md-block">-->
+  <!-- Divider -->
+  <!--   <hr class="sidebar-divider d-none d-md-block">-->
 
-    <!-- Sidebar Toggler (Sidebar) -->
-    <div class="text-center d-none d-md-inline">
-      <button class="rounded-circle border-0" id="sidebarToggle"></button>
-    </div>
-
-  </ul>
+  <!-- Sidebar Toggler (Sidebar) -->
+  <div class="text-center d-none d-md-inline">
+    <button class="rounded-circle border-0" id="sidebarToggle"></button>
+  </div>
+</ul>
