Mise en forme pages connecte

--- a/src/app/my-contrib-projects/my-contrib-projects.component.html
+++ b/src/app/my-contrib-projects/my-contrib-projects.component.html
@@ -36,7 +36,7 @@
           <div
             class="d-sm-flex align-items-center justify-content-between mb-4"
           >
-            <h1 class="h3 mb-0 text-gray-800">MES CONTRIBUTIONS PROJETS</h1>
+            <h1 class="h3 mb-0 text-gray-800">LES PROJETS QUE JE SOUTIENS</h1>
             <a
               href="#"
               class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
@@ -52,7 +52,7 @@
             role="alert"
             *ngIf="listProjects.length == 0"
           >
-            <strong>Aucune contribution de projet!</strong> n'est disponible.
+            <strong>Aucun projet soutenu</strong> n'est disponible.
             <button
               type="button"
               class="close"
