--- a/src/app/templates/user/side-bar-left-templates/side-bar-left-templates.component.html
+++ b/src/app/templates/user/side-bar-left-templates/side-bar-left-templates.component.html
@@ -44,7 +44,7 @@
           href="#"
           routerLink="/user-my-contrib-projetcs"
           routerLinkActive="active"
-          >Les projets que je finance</a
+          >Les projets que je soutiens</a
         >
       </div>
     </div>
