--- a/src/app/templates/user/nav-templates/nav-templates.component.html
+++ b/src/app/templates/user/nav-templates/nav-templates.component.html
@@ -39,7 +39,7 @@
         class="form-control bg-light border-0 small"
         [(ngModel)]="tagSearchGlobal"
         name="tagSearchGlobal"
-        placeholder="Search for project..."
+        placeholder="Rechercher un projet"
         aria-label="Search"
         aria-describedby="basic-addon2"
       />
@@ -113,7 +113,7 @@
       >
         <i class="fas fa-bell fa-fw"></i>
         <!-- Counter - Alerts -->
-        <span class="badge badge-danger badge-counter">3+</span>
+        <span class="badge badge-danger badge-counter"></span>
       </a>
       <!-- Dropdown - Alerts -->
       <div
@@ -132,29 +132,6 @@
             <span class="font-weight-bold"
               >A new monthly report is ready to download!</span
             >
-          </div>
-        </a>
-        <a class="dropdown-item d-flex align-items-center" href="#">
-          <div class="mr-3">
-            <div class="icon-circle bg-success">
-              <i class="fas fa-donate text-white"></i>
-            </div>
-          </div>
-          <div>
-            <div class="small text-gray-500">December 7, 2019</div>
-            $290.29 has been deposited into your account!
-          </div>
-        </a>
-        <a class="dropdown-item d-flex align-items-center" href="#">
-          <div class="mr-3">
-            <div class="icon-circle bg-warning">
-              <i class="fas fa-exclamation-triangle text-white"></i>
-            </div>
-          </div>
-          <div>
-            <div class="small text-gray-500">December 2, 2019</div>
-            Spending Alert: We've noticed unusually high spending for your
-            account.
           </div>
         </a>
         <a class="dropdown-item text-center small text-gray-500" href="#"
@@ -180,7 +157,6 @@
           >{{ infosUser.prenom }}{{ " " }}{{ infosUser.nom }}</span
         >
         <i class="fas fa-user-circle"></i>
-        <!-- <img class="img-profile rounded-circle" [src]="urlImageProfil"> -->
       </a>
       <!-- Dropdown - User Information -->
       <div
@@ -200,16 +176,8 @@
           routerLink="/user-messagerie"
           routerLinkActive="active"
         >
-          <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+          <i class="far fa-envelope fa-sm fa-fw mr-2 text-gray-400"></i>
           Messagerie
-        </a>
-        <a class="dropdown-item" href="#">
-          <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-          Settings
-        </a>
-        <a class="dropdown-item" href="#">
-          <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-          Activity Log
         </a>
         <div class="dropdown-divider"></div>
         <a
