redirection Logout fixed

--- a/src/app/templates/user/nav-templates/nav-templates.component.html
+++ b/src/app/templates/user/nav-templates/nav-templates.component.html
@@ -180,12 +180,8 @@
           Messagerie
         </a>
         <div class="dropdown-divider"></div>
-        <a
-          class="dropdown-item"
-          [routerLink]="['/Identification', 'deconnection']"
-          routerLinkActive="active"
-        >
-          <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+        <a class="dropdown-item" routerLink="/" routerLinkActive="active">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
           Logout
         </a>
       </div>
