--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -1,3 +1,4 @@
-.container{
+/* .container {
   text-align: center;
-}
+  background-image: url("./LendMe/src/assets/img/accueil/module1_accueil.png");
+} */
