--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -15,74 +15,37 @@
     <div class="container">
 
       <!-- Jumbotron Header -->
-      <header class="jumbotron my-4">
+
+      <div class="jumbotron my-4">
         <h1 class="display-3">{{'accueil_h1' | translate}}</h1>
         <p class="lead">Donner du sens à votre épargne. Aider quelqu'un a réaliser son rêve.</p>
-        <a *ngIf= "infoUser" href="#" class="btn btn-primary btn-lg" [routerLink]="['/Identification']" routerLinkActive="active">Je m'inscris</a>
-      </header>
+        <a *ngIf="infoUser"  class="btn btn-primary btn-lg" [routerLink]="['/Identification']" routerLinkActive="active">Je m'inscris</a>
+      </div>
 
       <!-- Page Features -->
       <div class="jumbotron my-4">
 
         <!--http://placehold.it/500x325-->
         <h1>Les projets du moment</h1>
-        <div class="col-lg-4 col-md-6 mb-4" *ngFor="let project of listProjects; let i = index ">
-          <div class="card h-100" [routerLink]="['/visitor-projetcs-show' , project.token ]">
-            <img class="card-img-top" [src]="project.afficheProject" alt="" style="width :100%;height:100%" alt="">
-            <div class="card-body">
-              <h4 class="card-title">{{project.nom}}</h4>
-                        <h5 class="card-title">{{project._statut_project.nom}}</h5>
-                        <h5 class="card-title"  *ngIf="project._statut_project.nom === 'Validé'">{{listtemplateProjects[i].nbrJours}}</h5>
-                        <h5 class="card-title">{{listtemplateProjects[i].dateLimiteCollecteFormate}}</h5>
-                        <h5 class="card-title">{{project.categoryProject.nom}}</h5>
-                        <table  style="margin-left: 30%;">
 
-                          <tr>
 
-                            <td width="10%">
+          <div class="imageProject">
 
-                              <img class="card-img-top" src="./assets/img/heart-icon.png"  alt="" style="width :35px;height:35px;" >
 
-                              <span>{{project.total_hearts}}</span>
+            <img
+              src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/education-7b54d7dff0da7a6c20e0f7a59ecfadc3a1fbed99528c2a2dde0dd073cb0681a3.jpg"
+              alt="education">
+            <img
+              src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/bio-7f8ad01d05a6333595a23a408c03b6d26b1b5653aeb4b4e0236d501e94d3f9ef.jpg"
+              alt="alimentation responsable">
+            <img
+              src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/changer_de_vie-9c76eb956d6099e3dce9b2a5e11b5176b59a9fe57d79fa846204d27f5346e411.jpg"
+              alt="Vie">
 
-                            </td>
-
-                            <td width="40%"  style="text-align: center;">
-
-                              <img class="card-img-top" src="./assets/img/like_ico.png"  alt="" style="width :35px;height:35px;" >
-
-                              <span>{{project.total_like}}</span>
-
-                            </td>
-
-                            <td width="20%">
-
-                              <img class="card-img-top" src="./assets/img/dislike_ico.png"  alt="" style="width :35px;height:35px;" >
-
-                              <span>{{project.total_dislike}}</span>
-
-                            </td>
-
-                            <td width="20%">
-
-                              <img class="card-img-top" src="./assets/img/picto-dons-300x300.png" alt="" style="width :30px;height:30px;" ><span  style="font-weight: bold;">{{project.total_fonds}}&euro;</span>
-
-                            </td>
-
-                          </tr>
-                        </table>
-              <p class="card-text">{{project.description}}</p>
-            </div>
-            <div class="card-footer">
-              <a  class="btn btn-primary" [routerLink]="['/visitor-projetcs-show' , project.token ]"  >Consulter</a>
-            </div>
           </div>
-        </div>
 
 
       </div>
-      <!-- /.row -->
-
     </div>
     <!-- /.container -->
 
