fix footer connexion et image accueil hover zoom

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -32,13 +32,13 @@
           <div class="imageProject">
 
 
-            <img
+            <img class="photo1"
               src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/education-7b54d7dff0da7a6c20e0f7a59ecfadc3a1fbed99528c2a2dde0dd073cb0681a3.jpg"
               alt="education">
-            <img
+            <img class="photo2"
               src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/bio-7f8ad01d05a6333595a23a408c03b6d26b1b5653aeb4b4e0236d501e94d3f9ef.jpg"
               alt="alimentation responsable">
-            <img
+            <img class="photo3"
               src="https://d3v4jsc54141g1.cloudfront.net/assets/home2020/engagements/changer_de_vie-9c76eb956d6099e3dce9b2a5e11b5176b59a9fe57d79fa846204d27f5346e411.jpg"
               alt="Vie">
 
